--- a/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
+++ b/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AssemblySetup.cs" />
     <Compile Include="Style\nsCSSScannerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Style\CssLoaderTests.cs" />
@@ -59,6 +60,10 @@
     <ProjectReference Include="..\Alba.CsCss\Alba.CsCss.csproj">
       <Project>{72DD968A-2B97-4D3D-8A87-80A76C6C830A}</Project>
       <Name>Alba.CsCss</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Alba.Framework\Alba.Framework.Testing\Alba.Framework.Testing.csproj">
+      <Project>{D4A932D6-F7BE-4EE4-89F4-F72BD270286B}</Project>
+      <Name>Alba.Framework.Testing</Name>
     </ProjectReference>
     <ProjectReference Include="..\Alba.Framework\Alba.Framework\Alba.Framework.csproj">
       <Project>{62730B23-450C-4B93-8D5C-F7037DB6D263}</Project>
