--- a/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
+++ b/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
@@ -51,7 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AssemblySetup.cs" />
-    <Compile Include="Style\nsCSSScannerTests.cs" />
+    <Compile Include="Style\CssScannerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Style\CssLoaderTests.cs" />
     <Compile Include="PublicInterface.cs" />
