Added test for SO question 18262390; fixed GetUris method (NRE if errors in CSS); added CssDeclaration.AllData property

--- a/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
+++ b/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
@@ -76,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Files\bootstrap.css" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Files\StackOverflow18262390.css" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
