--- a/Alba.CsCss/Alba.CsCss.nuspec
+++ b/Alba.CsCss/Alba.CsCss.nuspec
@@ -11,7 +11,7 @@
     <iconUrl>https://raw.github.com/Athari/CsCss/master/.nuget/css.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>Copyright 2013</copyright>
+    <!--<copyright>Copyright 2013</copyright>-->
     <tags>CSS CSS3 Style Stylesheet Parser Lexer Scanner Parse Syntax LINQ</tags>
   </metadata>
   <files>
