Added CssStyleSheet class diagram

--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -228,6 +228,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>nsINameSpaceManager.h</DependentUpon>
     </None>
+    <None Include="Diagrams\CssStyleSheet.cd" />
     <None Include="Gfx\Original\gfxFontConstants.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <AutoGen>True</AutoGen>
